--- a/app/globals.css
+++ b/app/globals.css
@@ -55,5 +55,10 @@
   }
   body {
     @apply bg-background text-foreground;
+    font-feature-settings: "rlig" 1, "calt" 1;
   }
+}
+
+.text-balance {
+  text-wrap: balance;
 }
